--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" dir="ltr">
   <head>
     <title>moy site</title>
-    <link rel="stylesheet" href="moy.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <h1 background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXQQqPjaLOM_cy0xH33xIX16qvc1Cgf5ncSg&usqp=CAU">МОЙ ПЕРВЫЙ САЙТ</h1>
